# SDL_macro

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build-all.sh  build-android.sh  build-linux.sh  build-windows.sh  imgui.ini  toolchain-mingw.cmake
android-project/app/: build.gradle
include/: AppContext.h  Config.h  DrawUtils.h  ProjectTree.h
src/: Config.cpp  ProjectTree.cpp  main.cpp
